just_potatoes_service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jus-potatoes-service-service
spec:
  selector:
    app: jus-potatoes
  ports:
    - protocol: TCP
      port: 1993
      targetPort: 1993
